force-app/main/default/objects/PhoneNumbers__c/PhoneNumbers__c.object-meta.xml
<CustomObject>
    <description>Phone numbers associated with a Dealer/Person pair</description>
    <label>Phone Number</label>
    <nameField>
        <displayFormat>PHONE{0000000}</displayFormat>
        <label>Phone Numbers Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>