force-app/main/default/objects/PhoneNumbers__c/fields/Activator_PhoneNumberId__c.field-meta.xml
<CustomField>
    <fullName>Activator_PhoneNumberId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Phone Number record in the Activator System</inlineHelpText>
    <label>Activator Phone Number Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>