force-app/main/default/objects/PhoneNumbers__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Person associated with this Dealer/Phone pair</inlineHelpText>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Phone Numbers</relationshipLabel>
    <relationshipName>Phone_Numbers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>