force-app/main/default/objects/PhoneNumbers__c/fields/PhoneNumberStatus__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumberStatus__c</fullName>
    <label>Phone Number Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed Valid</fullName>
            </value>
            <value>
                <fullName>Sourced</fullName>
            </value>
            <value>
                <fullName>Invalid / Disconnected</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Opted-out from All Communication</fullName>
            </value>
            <value>
                <fullName>Opted-out from BDC Activator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>