force-app/main/default/objects/PhoneNumbers__c/fields/PhoneType__c.field-meta.xml
<CustomField>
    <fullName>PhoneType__c</fullName>
    <inlineHelpText>Which type of number</inlineHelpText>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>