force-app/main/default/objects/PhoneNumbers__c/fields/SMSOptIn__c.field-meta.xml
<CustomField>
    <fullName>SMSOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the person is opted-in for SMS</inlineHelpText>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>